Update report pdf, profile, discount, tax,

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -3,6 +3,7 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
+    <img width="55" src="./assets/images/logo-pos-sandro.jpeg" alt="logo">
     <a class="logo" href="#" (click)="navigateHome()">POS Sandro</a>
   </div>
   <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
