Updated pdf report, admin dan sales dashboard

--- a/src/app/@theme/components/tables/btn-status/btn-status.component.html
+++ b/src/app/@theme/components/tables/btn-status/btn-status.component.html
@@ -2,7 +2,8 @@
 value == 'Active'||value == 'Approved'||value == 'Completed'?'success':
 value == 'Deactivated'?'basic':
 value == 'Pending'?'warning':
-value == 'Rejected'?'danger':'basic'
+value == 'Rejected'?'danger':
+value == 'Canceled'?'info':'basic'
 ">
     {{value||"Not Set"}}
 </button>
