--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -4,7 +4,7 @@
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
     <img width="55" src="./assets/images/logo-pos-sandro.jpeg" alt="logo">
-    <a class="logo" href="#" (click)="navigateHome()">POS Sandro</a>
+    <a class="logo" href="#" (click)="navigateHome()">POS Minimarket Berkat</a>
   </div>
   <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
     <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
@@ -14,11 +14,11 @@
 <div class="header-container">
   <nb-actions size="small">
 
-    <nb-action class="control-item">
+    <!-- <nb-action class="control-item">
       <nb-search type="rotate-layout"></nb-search>
-    </nb-action>
-    <nb-action class="control-item" icon="email-outline"></nb-action>
-    <nb-action class="control-item" icon="bell-outline"></nb-action>
+    </nb-action> -->
+    <!-- <nb-action class="control-item" icon="email-outline"></nb-action> -->
+    <!-- <nb-action class="control-item" icon="bell-outline"></nb-action> -->
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
       <nb-user [nbContextMenu]="userMenu"
                 nbContextMenuTag="user-tag"
