--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,22 @@
 <div class="row">
+  <div class="col-xxl-12">
+    <nb-card>
+      <nb-card-body>
+        <h2>Hi Admin, </h2>
+      </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
+<div class="row">
   <div class="col-xxxl-3 col-md-6" *ngFor="let statusCard of statusCards">
     <ngx-status-card [title]="statusCard.title" [type]="statusCard.type" [total]="statusCard.total" [totalType]="statusCard.totalType">
       <i [ngClass]="statusCard.iconClass"></i>
     </ngx-status-card>
   </div>
 </div>
+
+
 
 <div class="row">
   <div class="col-xxxl-3 col-md-6" *ngFor="let statusCard of statusCards2">
