Fix pdf width with fixed width

--- a/src/app/@theme/components/tables/smart-table/smart-table.component.scss
+++ b/src/app/@theme/components/tables/smart-table/smart-table.component.scss
@@ -8,14 +8,6 @@
 
 .print-wrapper{
   position: fixed;
-  width: 35%;
+  width: 850px;
   top: 10000000px;
-}
-
-@media (max-width:1400px) {
-  .print-wrapper{
-    position: fixed;
-    width: 75%;
-    top: 10000000px;
-  }
 }
