add admin first name on dashboard 3

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="col-xxl-12">
     <nb-card>
       <nb-card-body>
-        <h2>Hi Admin, {{firstName}} </h2>
+        <h2>Hi, {{firstName}} </h2>
       </nb-card-body>
     </nb-card>
   </div>
